[package]
name = "vecmat"
version = "0.4.1"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>", "Bridger Herman <herma582@umn.edu>"]
edition = "2018"

description = "Lightweight low-dimensional vector and matrix library"
documentation = "https://docs.rs/vecmat"
homepage = "https://github.com/nthend/vecmat-rs"
repository = "https://github.com/nthend/vecmat-rs"
readme = "README.md"
keywords = ["vector", "matrix", "math"]
categories = ["algorithms", "data-structures", "science"]
license = "MIT/Apache-2.0"

[dependencies]
num-traits = "0.2"
num-integer = "0.1"
serde = "1.0.59"
serde_derive = "1.0.59"
